--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:allowBackup="true"
+        android:enableOnBackInvokedCallback="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -30,7 +31,7 @@
         <activity android:name=".MainActivity"
             android:exported="false"/>
      <activity
-            android:name=".StudentDetail"
+            android:name=".StudentManagement.StudentDetail"
             android:exported="false" />
 
     </application>
